# sorting-algorithms

./: .gitignore  Miguel.py  carlos.py  hilos.py  log copy.txt  log.txt  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
sorting_algorithms/: algorithms.py
util/: logger.py  numbers_generator.py  thread_runner.py
